# deep-gait

./: .gitignore  DeepGait.ipynb  README.md  config.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
deep_gait/: __init__.py  __main__.py  dataset.py
docs/: npm-scripts.md
notebooks/: DeepGait.ipynb
scripts/: free-api-port.sh  run-all.sh
src/ml/: __init__.py  config_io.py  dataset.py  inference.py  model.py  processor.py  train.py
tests/: test_ml_smoke.py
webapp/client/: index.html  package.json
webapp/client/src/: App.jsx  index.css
webapp/server/: .env.example  package.json
webapp/server/src/: index.js  inference.js
webapp/server/src/models/: MatchResult.js  Suspect.js
