[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-gait"
version = "0.1.0"
description = "Deep Gait POC — gait recognition notebook and tooling"
requires-python = ">=3.10"
dependencies = [
    "gdown>=5.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_gait*"]
